--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+@import url(https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css);
+
 :root {
   --red-600: #dc2626;
   --blue-500: #3b82f6;
@@ -319,6 +321,9 @@ th, td {
 .grid-cols-2 {
   grid-template-columns: repeat(2, minmax(0, 1fr));
 }
+.grid-cols-3 {
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+}
 .grid-cols-4 {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
@@ -346,6 +351,9 @@ th, td {
 .h-6 {
   height: 1.5rem;
 }
+.h-8 {
+  height: 2rem;
+}
 .h-10 {
   height: 2.5rem;
 }
@@ -366,6 +374,9 @@ th, td {
 }
 .w-6 {
   width: 1.5rem;
+}
+.w-8 {
+  width: 2rem;
 }
 .w-10 {
   width: 2.5rem;
@@ -436,6 +447,9 @@ th, td {
 }
 .justify-end {
   justify-content: end;
+}
+.text-sm {
+  font-size: 0.875rem;
 }
 .text-upercase {
   text-transform: uppercase;
@@ -540,6 +554,9 @@ th, td {
 }
 .hover\:text-white:hover {
   color: white;
+}
+.hover\:text-green-600:hover {
+  color: var(--green-600);
 }
 .hover\:bg-green-50:hover {
   background-color: var(--green-50);
