--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,8 +2,6 @@
 
 :root {
   --red-600: #dc2626;
-  --blue-500: #3b82f6;
-  --blue-600: #2563EB;
   --gray-100: #f1f5f9;
   --gray-200: #e2e8f0;
   --gray-500: #6B7280;
@@ -80,6 +78,7 @@ blockquote {
 }
 input, textarea {
   font-size: 100%;
+  font-family: inherit;
 }
 input::placeholder, textarea::placeholder {
   color: #9ca3af;
@@ -162,17 +161,17 @@ th, td {
 .border-gray-600 {
   border-color: var(--gray-600);
 }
-.border-blue-600 {
-  border-color: var(--blue-600);
+.border-green-600 {
+  border-color: var(--green-600);
 }
 .bg-white {
   background-color: white;
 }
-.bg-blue-500 {
-  background-color: var(--blue-500);
+.bg-green-600 {
+  background-color: var(--green-600);
 }
-.bg-blue-600 {
-  background-color: var(--blue-600);
+.bg-green-500 {
+  background-color: var(--green-600);
 }
 .bg-gray-100 {
   background-color: var(--gray-100);
@@ -231,6 +230,10 @@ th, td {
   padding-right: 1.5rem;
   padding-left: 1.5rem;
 }
+.py-0 {
+  padding-top: 0;
+  padding-bottom: 0;
+}
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -283,8 +286,15 @@ th, td {
 .max-w-none {
   max-width: none;
 }
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
+}
 .mt-1 {
   margin-top: 0.25rem;
+}
+.ml-1 {
+  margin-left: 0.25rem;
 }
 .ml-2 {
   margin-left: 0.5rem;
@@ -566,6 +576,9 @@ th, td {
 }
 .hover\:bg-green-500:hover {
   background-color: var(--green-500);
+}
+.hover\:bg-green-600:hover {
+  background-color: var(--green-600);
 }
 .hover\:bg-gray-200:hover {
   background-color: var(--gray-200);
